# editor

./: .gitignore  CMakeLists.txt  main.cpp  myapplication.h  myappwindow.cpp  mytextarea.cpp  mytextarea.h  mytextbuffer.cpp  mytextbuffer.h  mytextview.cpp  mytextview.h  mywindow.ui  testing.glade  window.ui
formatter/: formatter.cpp  pangostylizer.cpp  pangostylizer.h  regexformatter.cpp  regexformatter.h  style.h  stylefactory.cpp  stylefactory.h  stylelist.cpp  stylelist.h  stylemap.cpp  stylemap.h  stylizer.cpp  stylizer.h  wordformatter.cpp  wordformatter.h
src/: CMakeLists.txt
src/gtkmain/: CMakeLists.txt  CMakeLists.txt~
src/gtkmain/src/: main.cpp  myapplication.cpp  myappwindow.cpp  myappwindow.h  mytextarea.cpp  mytextarea.h  pangostylizer.cpp  pangostylizer.h
src/libeditor/: CMakeLists.txt  CMakeLists.txt~
src/libeditor/include/: mytextbuffer.h  mytextview.h  position.h
src/libeditor/include/formatter/: formatter.h  formatter.h~  regexformatter.h  selectionformatter.h
src/libeditor/include/style/: style.h  stylefactory.h  stylelist.h  stylemap.h  styletype.h  stylizer.h
src/libeditor/src/: formatter.cpp~  mytextbuffer.cpp  mytextview.cpp  regexformatter.cpp  regexformatter.cpp~  selectionformatter.cpp  style.cpp  style.cpp~  styletype.cpp  stylizer.cpp
